fix(website): change header logo to avoid search bar overlapping in smaller resolution

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -782,6 +782,12 @@ blockquote {
     display: none !important;
   }
 }
+@media (max-width: 500px) {
+  img.logo {
+    content:url("../img/Accord-Project-logo-small.svg");
+  }
+}
+
 /* End of Navbar */
 
 /* Promo section */
